--- a/css/style.css
+++ b/css/style.css
@@ -2,49 +2,130 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-  margin: 0;
-  padding: 0;
+a,
+abbr,
+acronym,
+address,
+applet,
+article,
+aside,
+audio,
+b,
+big,
+blockquote,
+body,
+canvas,
+caption,
+center,
+cite,
+code,
+dd,
+del,
+details,
+dfn,
+div,
+dl,
+dt,
+em,
+embed,
+fieldset,
+figcaption,
+figure,
+footer,
+form,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+header,
+hgroup,
+html,
+i,
+iframe,
+img,
+ins,
+kbd,
+label,
+legend,
+li,
+mark,
+menu,
+nav,
+object,
+ol,
+output,
+p,
+pre,
+q,
+ruby,
+s,
+samp,
+section,
+small,
+span,
+strike,
+strong,
+sub,
+summary,
+sup,
+table,
+tbody,
+td,
+tfoot,
+th,
+thead,
+time,
+tr,
+tt,
+u,
+ul,
+var,
+video {
   border: 0;
   font: inherit;
   font-size: 100%;
+  margin: 0;
+  padding: 0;
   vertical-align: baseline;
 }
 
 /* HTML5 display-role reset for older browsers */
 
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
   display: block;
 }
 
 body {
+  font-family: 'ARSMaquette', Helvetica Neue, Arial, sans-serif;
   line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote::before, blockquote::after,
-q:before, q::after {
+blockquote::before,
+blockquote::after,
+q::before,
+q::after {
   content: '';
   content: none;
 }
@@ -54,9 +135,90 @@ table {
   border-spacing: 0;
 }
 
+/* fonts */
+
+@font-face {
+  font-family: 'ARSMaquette';
+  src: url(../fonts/ARSMaquette.ttf) format('truetype');
+}
+
 /* YOUR CODE HERE */
 
 
 body {
   background-color: red;
+}
+
+/* footer */
+
+.main_footer {
+  background-color: #131313;
+  font-size: 0.8rem;
+  font-weight: 700;
+  text-align: center;
+  padding: 2.3rem 0;
+}
+
+.icons {
+  margin-bottom: 2.5rem;
+}
+
+.icons .anchor {
+  border-radius: 50%;
+  background-color: #333;
+  color: white;
+  font-size: 1.1rem;
+  padding: 0.7rem;
+  margin: 0 0.45rem;
+}
+
+.links .anchor {
+  color: #aaa;
+  font-size: 0.75rem;
+  font-weight: 100;
+  text-decoration: none;
+  margin: 1rem 0.3rem;
+}
+
+.links .anchor:hover {
+  color: white;
+}
+
+.credits {
+  background-color: black;
+  color: #9a9a9a;
+  font-size: 0.8rem;
+  text-align: center;
+  padding: 2.5rem 0;
+}
+
+.credits .text {
+  display: inline-block;
+  padding: 0.2rem 0;
+}
+
+.credits .tnw_logo {
+  height: 0.6rem;
+}
+
+.credits .fa-heart {
+  color: #f42;
+  font-size: 0.55rem;
+}
+
+.credits .stackpath {
+  display: inline-block;
+  height: 0.6rem;
+}
+
+/* queries */
+
+@media (max-width: 750px) {
+  .credits {
+    padding: 2rem 0;
+  }
+
+  .credits .text {
+    display: block;
+  }
 }
