--- a/css/style.css
+++ b/css/style.css
@@ -168,7 +168,7 @@ table {
   height: 30px;
   background-color:#000;
   line-height: 25px;
-  padding-left: 24px;
+  padding-left: 10px;
 }
 
 .topmost-navigation a {
@@ -201,24 +201,34 @@ table {
 
 .navbar-nav li {
   float: left;
-  padding: 4px;
-  margin-left: 20px;
+  padding: 4px 0;
+  margin-left: 10px;
 }
 
 .navbar-nav a {
   text-decoration: none;
   margin: 0 5px;
+  font-size: 0.9em;
 }
 
 .logo-container {
-  position: fixed;
+  position: absolute;
   top: 0;
   left: 0;
   width: 100px;
-  height: 55px;
-  padding-top: 30px;
-  background-color: red;
+  height: 80px;
+  background-color:red;
   display: none;
+}
+
+.nav-logo {
+  top: 20px;
+  position: relative;
+}
+
+.nav-logo img{
+  width: 60px;
+  margin-left: 15px;
 }
 
 .top-header {
@@ -228,29 +238,35 @@ table {
 
 .top-header a{
   color:#888;
-  font-size: 1em;
 }
 
 .search-plus-menu {
-  width: 110px;
+  width: auto;
   height: 50px;
   background-color:white;
   top: 30px;
-  right: 0;
+  right: 0px;
   position: absolute;
+  
 }
 
 .menu-btn,
 .search-btn {
   width: 50px;
-  border-left: solid 1px #ccc;
+  border-left: solid 1px #ddd;
   text-align: center;
   height: 50px;
   line-height: 50px;
 }
 
+.menu-btn{
+  color: #f42;
+  display: none;
+}
+
 .fa-search {
   transform: rotate(90deg);
+  color:#ddd;
 }
 
 .our-tech-festival_ {
@@ -261,25 +277,32 @@ table {
   background-color:yellow;
 }
 
-.front_{
-  height: auto;
-}
-
 .latest-news_  {
   padding-top: 20px;
 }
 
-.front_ .article-large_ {
-  float: left;
-  width: 65%;
+.front_ {
+  display: flex;
+  height: auto;
+  padding: 2px 10px;
 }
 
-.front_ .article-large_ .main_article_{
+.main_article_{
+  position: relative;
   background-image: url(../img/index.png);
   background-size: cover;
-  width: 98%;
-  margin: auto auto auto 8px;
   height: 500px;
+}
+
+.cover-gradient {
+  position: absolute;
+  height: 500px;
+  width: 100%;
+  background-image: url(../images/cover-gradient.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: 50% 20%;
+  z-index: 1000;
 }
 
 .main-heading-text {
@@ -299,7 +322,17 @@ table {
 }
 
 .magic-logo {
+  top: 30px;
   width:60%;
+  z-index: 1200;
+  position: absolute;
+}
+
+.main-heading-text .date {
+  padding-right: 20px;
+  width: 94%;
+  position: absolute;
+  z-index: 1200;
 }
 
 .distract {
@@ -323,15 +356,19 @@ table {
   font-weight: lighter;
 }
 
-.front_ .article-thumb_ {
-  float: right;
+.article-thumb_ {
   width: 35%;
   height: 500px;
 }
 
-.article-thumb_ .wrap-details {
-  width: 98%;
+.article-large_{
+  width: 65%;
+  height: 500px;
+}
+
+.wrap-details {
   height:245px;
+  margin-left: 10px;
 }
 
 .top-article_ {
@@ -384,6 +421,22 @@ table {
 .faded_text {
   color: #aaa;
   font-size: 0.75rem;
+}
+
+._news- {
+  color: #fff;
+}
+
+.my-deal-section {
+  margin: 45px 60px;
+}
+
+.section-title {
+  display: flex;
+}
+
+.section-title h1 {
+  width: 50%;
 }
 
 /* headlines */
@@ -525,11 +578,150 @@ table {
   color: black;
 }
 
+.funding {
+  position: relative;
+}
+
+.funding img {
+  width: 50px;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+.funding-rounds {
+  padding: 40px 80px;
+  margin: 80px auto 35px auto;
+}
+
+.funds {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-template-rows: auto auto;
+}
+
+.round {
+  background: rgba(255,68,34,.03);
+  margin: 5px;
+}
+
+.funding-title {
+  color: #f42;
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 20px;
+}
+
+.funding-links {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.funding-links a {
+  color: #f42;
+  text-decoration: none;
+}
+
+.funding-title h3 {
+  width: 50%;
+  padding: 5px;
+  font-size: 2em;
+  font-weight: bolder;
+}
+
+.funding-title div {
+  width: 50%;
+  padding: 5px 0;
+}
+
+.funding-title h1 {
+  font-size: 1.2em;
+  font-weight: bolder;
+  text-align: left;
+}
+
+.funding-title span {
+  display: inline-block;
+  margin: 1px 6px;
+  font-weight: normal;
+}
+
+.varbar {
+  display: inline-block;
+  color: #f42;
+}
+
+.funder-name{
+  color: #fff;
+  font-size: 1.1em;
+  font-weight: bold;
+  background-color: red;
+  height: 40px;
+  line-height: 35px;
+  display: block;
+  padding-left: 90px;
+}
+
+.figure {
+  background: rgba(255,68,34,.08);
+  height: 60px;
+  font-size: 0.9em;
+  padding-left: 90px;
+}
+
+.figure strong {
+  font-size: 1.5em;
+  font-weight: bolder;
+  display: inline-block;
+  padding-bottom: 6px;
+  padding-top: 6px;
+}
+
+.figure span {
+  color:#888;
+}
+
+.round .-payment {
+  height: 50px;
+  font-weight: normal;
+  padding-left: 20px;
+  padding: 20px 20px;
+  color:#888;
+}
+
+.-payment span {
+  font-weight: normal;
+}
+
+.-payment .fa-briefcase, 
+.-payment .fa-tag {
+  color: #000;
+}
+
+.round .-payment span {
+  display: inline-block;
+  margin-bottom: 8px;
+}
+
+.round .-details {
+  color:#888;
+  height: 50px;
+  border-top: 1px solid rgba(255,68,34,.25);
+  font-size: 0.7em;
+  font-weight: normal;
+  padding-left: 20px;
+  padding-top: 10px;
+  line-height: 16px;
+}
+
+.round .-details span {
+  color: #ccc;
+}
+
 /* deals */
 
-.deals_section {
-  margin: 5rem 0;
-}
+
+
 
 .deals_header {
   display: flex;
@@ -672,6 +864,103 @@ table {
 /* queries */
 
 @media (max-width: 1000px) {
+  /* Funding*/
+  .funds {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-template-rows: auto;
+  }
+
+  .funding-title {
+    display: block;
+  }
+
+  .-payment {
+    font-size: 0.8em;
+  }
+
+  .-details {
+    font-size: 0.7em
+  } 
+
+  .funding-links {
+    display: flex;
+    justify-content: flex-start;
+  }
+
+  .funding-title h1 {
+    width: 100%;
+    padding: 5px;
+    font-size: 1.5em;
+    font-weight: bolder;
+  }
+  
+  .funding-title div {
+    width: 100%;
+    padding: 5px 0;
+  }
+
+  .funding-rounds {
+    padding: 10px;
+    margin: auto;
+  }
+
+  .my-deal-section {
+    margin: 0;
+  }
+
+ /*dispaly red fixed logo*/
+  .logo-container {
+    display: block;
+  }
+
+  /* Reposition logo text remove the large white logo*/
+  .nav-logo {
+    top: 20px;
+    position: relative;
+  }
+
+  .magic-logo {
+    display: none;
+  }
+
+  /*reposition navbar and hide some links hide some links */
+  .navbar-nav .latest,
+  .left-float ._news- {
+    padding-left: 100px;
+  }
+
+  .neutral,
+  .growth-quaters {
+   display: none;
+  }
+
+  /* others */
+  .menu-btn {
+    display: block;
+  }
+
+  .main-heading-text h1 {
+    font-size: 2.5em;
+  }
+
+  ._details_ h2 {
+    font-size: 1.4em;
+  }
+
+  .wrap-details  {
+    height: 190px;
+  }
+
+  .cover-gradient,
+  .main-heading-text .date {
+    display: none;
+  }
+
+  .main_article_ {
+    height: 389px;
+  }
+
   /* healines */
 
   .headlines {
@@ -689,7 +978,96 @@ table {
 }
 
 @media (max-width: 750px) {
-  /* headlines */
+
+  /*Change position and height of red logo*/
+  .logo-container {
+    display: block;
+    height: 50px;
+    padding-top: 0;
+  }
+
+  /*reposition logo text*/
+  .nav-logo {
+    top: 10px;
+    position: relative;
+  }
+
+  /* Reposition the main articles*/
+  .front_ {
+    display: block;
+  }
+
+  .article-large_ {
+    width: 100%;
+    height: auto;
+  }
+
+  .main_article_ {
+    height: 190px;
+  }
+
+  .top-article_ {
+    margin-top: 10px;
+  }
+
+  .wrap-details  {
+    margin-left: 0%;
+  }
+
+  .article-thumb_ {
+    width: 100%;
+  }
+
+  ._details_ h2,
+  .main-heading-text h1 {
+    font-size: 1.1em;
+  }
+
+  .our-tech-festival_ {
+    padding-left: 10px;
+    font-size: 0.7em;
+  }
+
+  .funding-links {
+    display: block;
+  }
+
+  .funding-links span {
+    display: block;
+    margin: 7px 4px;
+  }
+
+  .funds {
+    display: block;
+  }
+
+  .funds .round {
+    margin-bottom: 15px;
+  }
+
+  .funding-rounds {
+    padding: 10px;
+    margin: auto;
+  }
+  
+  .varbar {
+    display: none;
+  }
+
+  /* hide the nav bar*/
+  .navbar-nav,
+  .topmost-navigation {
+    display: none;
+  }
+
+  .search-plus-menu {
+    top: 0;
+    right: 0;
+  }
+
+  .menu-btn {
+    display: block;
+  }
 
   .headlines {
     grid-template-columns: auto;
