--- a/css/style.css
+++ b/css/style.css
@@ -625,8 +625,8 @@ table {
 .funding-title h3 {
   width: 50%;
   padding: 5px;
-  font-size: 2em;
-  font-weight: bolder;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .funding-title h1 {
@@ -880,11 +880,11 @@ table {
     justify-content: flex-start;
   }
 
-  .funding-title h1 {
+  .funding-title h3 {
     width: 100%;
     padding: 5px;
-    font-size: 1.5em;
-    font-weight: bolder;
+    font-size: 1em;
+    font-weight: bold;
   }
 
   .funding-title div {
@@ -895,6 +895,10 @@ table {
   .funding-rounds {
     padding: 10px;
     margin: auto;
+  }
+  
+  .remove-round {
+    display: none;
   }
 
   .my-deal-section {
